<resources>
    <string name="app_name">Bill Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="enter_a_password">Enter A Password</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="please_enter_your_details_below_to_create_an_account">Please Enter Your Details Below To Create An Account</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="submit">Submit</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="password">Password:</string>
    <string name="username">Username</string>
    <string name="bills_tracker">Bills Tracker</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_new_email_address">Enter New Email Address</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="December">\"December \"</string>
    <string name="resendEmail">Resend Email</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="January_year">January %d</string>
    <string name="february">February %d</string>
    <string name="march">March %d</string>
    <string name="april">April %d</string>
    <string name="tac1">Terms of Service
\n\nLast Updated: March 31, 2023 (Section A)\n\n
SECTION A TERMS\n\n
Introduction and Overview\n\n
Thank you for choosing the Bill Tracker app. Bill Tracker, along with any parent, subsidiary, affiliate, or related companies are referred to in these provisions as “Bill Tracker Group” or simply “Bill Tracker” or “us.”\n
When you use the app, you enter into a binding contract with us. Each section of the agreement begins with an italicized annotation that is intended to help you navigate the agreement. The annotations do not completely
        summarize the agreement, though, and you should read each section carefully and in full. We’ve also bolded a few areas that talk about important legal rights, and you should be sure to read those sections carefully.
        These provisions in Section A apply to the app generally.\n
If you are an individual acting on your company’s or client’s behalf, you accept these provisions on their behalf and the term “you” will refer to you, your company, or your client.\n\n
Agreement to These Terms\n\n
    </string>
    <string name="tac2">
You need to agree to these terms to use our app. Bill Tracker will not share your personal information with third parties, unless specifically instructed to do so by you in order to provide additional services within the app.\n
To access and/or use the app, you acknowledge and agree:\n\n
To the terms and conditions of this agreement (“Agreement”), which includes:\n\n
The current version of the terms set out in Section A and:\n\n
Any additional provisions and conditions provided separately to you for your use of the app, which may include terms and conditions from third parties (which we refer to as “Additional Terms”)\n\n
You are at least 18 years of age;\n
You are capable of forming a binding contract with Bill Tracker; and\n
You are not a person who is prohibited from using the app under the laws of the United States, or any other applicable jurisdiction.\n\n
Your Personal Information\n\n
We want to be transparent about how we use personal information and about your rights in our Privacy Statement. You should only provide us with personal information of others if you have received permission to do so.\n
You agree that Bill Tracker may use and maintain your personal information to provide services within the scope of the app.\n
To the extent we allow you to input personal information (as the term is defined under applicable law) about other individuals other than yourself, you represent and warrant that you have complied with all applicable laws and
        received the proper authority or consent to allow us to collect and process such information to operate our business. You agree such sharing does not constitute a “sale” of information as defined under the California Consumer
        Privacy Act (CCPA).\n\n
Changes\n\n
    </string>
    <string name="tac3">
Change happens. When it does happen, we will update this Agreement. If the changes are material, you may need to accept the changes to use the app. Similarly, there may be circumstances where we need to update or discontinue the app.\n
We may modify the provisions of this Agreement at any time. We may notify you of such modifications by posting through the app or by other means. It is important that you review this Agreement whenever we modify it because your
        continued use of the app indicates your agreement to the modifications.\n
In some cases, you may need to accept changes to this Agreement to continue using the app. If you do not agree to these changes, you may stop using the app or terminate your account.\n
Similarly, we may update the app, including with tools, utilities, improvements or third party applications. You agree to receive these updates. We may further modify, suspend or discontinue the app at any time. You agree that we
        will not be liable to you or any third party for any modification, suspensions, or discontinuance of the app.\n\n
Your Rights to Use the app\n\n
You can use our app for your own personal and lawful use or as otherwise permitted under this Agreement.\n
You may access and use the app for your own internal, lawful and non-commercial purposes only.\n\n
Beta Features\n\n
We may provide you with access to beta features in the app. You are free to use them, but they are provided as-is.\n
We may include new and/or updated pre-release and trial features in the app and such features are provided as-is. Your use of such features is at no additional cost but you must follow additional rules or restrictions that we may
        place on their use.\n\n
Account\n\n
    </string>
    <string name="tac4">
You will provide accurate, up-to-date account information and securely manage such information.\n
You may need to sign up for an account to use the app. We may need to verify your identity, and you authorize us to collect information (e.g., date of birth, address) from you to do so (collectively, with all information requested
        to enable your account, “Account Information”). You will provide accurate, up-to-date Account Information, and we disclaim any liability arising from your failure to do so. Such failure may further limit your ability to use
        the app and affect the app’s accuracy and effectiveness.\n
You are responsible for securely managing your Account Information, including any password(s) for the app. You will notify us immediately if you believe that your Account Information or device you use to access the app has been lost
        or stolen or that someone is using your account without your permission.\n\n

Mobile App Use\n\n
Mobile versions of our app may be available for download but you must follow applicable third-party terms when using them.\n\n

With respect to the applicable Software, you are only granted limited rights to install and use the Software you have downloaded, signed up for or for which you have purchased a license or acquired a free trial. Bill Tracker reserves
        all other rights in the applicable Software not granted to you in writing in this Agreement. Conditioned upon your compliance with the terms and conditions of this Agreement, Bill Tracker grants you a personal, limited,
        nonexclusive, nontransferable, revocable license to use the applicable Software only for the period of use provided in the ordering and activation terms (as applicable), as set forth in this Agreement or in Bill Tracker’s
    </string>
    <string name="back">Back</string>
    <string name="name">Name:</string>
    <string name="customerService1">Customer Service:</string>
    <string name="helloUser">Hello user and thank you for reaching out to us. We\'re overjoyed at the opportunity to serve you today! Please describe your issue in detail so that we may assist you!</string>
    <string name="open1">Open</string>
    <string name="agent">Agent:</string>
    <string name="back_button">Back Button</string>
    <string name="achievement_unlocked">Achievement Unlocked!</string>
    <string name="you_ve_unlocked_the_first_trophy">You\'ve Unlocked The First Trophy!</string>
    <string name="my_trophy_case">My Trophy Case</string>
    <string name="first_trophy">First Trophy</string>
    <string name="second_trophy">Second Trophy</string>
    <string name="third_trophy">Third Trophy</string>
    <string name="fourth_trophy">Fourth Trophy</string>
    <string name="first_medal">First Medal</string>
    <string name="second_medal">Second Medal</string>
    <string name="third_medal">Third medal</string>
    <string name="fourth_medal">Fourth Medal</string>
    <string name="early_bird_trophy">Early Bird Trophy</string>
    <string name="tenth_trophy">Tenth Trophy</string>
    <string name="twelfth_trophy">Twelfth Trophy</string>
    <string name="eleventh_trophy">Eleventh Trophy</string>
    <string name="thirteenth_trophy">Thirteenth Trophy</string>
    <string name="trophy_description_box">Trophy Description Box</string>
    <string name="close_trophy">Close Trophy</string>
    <string name="share_trophy">Share Trophy</string>
    <string name="march_26_2023_09_35_pm">March 26, 2023 09:35 PM</string>
    <string name="customer_name">Customer Name:</string>
    <string name="email_example_com">email@example.com</string>
    <string name="open_ticket">Open Ticket</string>
    <string name="email">Email:</string>
    <string name="unread_messages">Unread Messages:</string>
    <string name="unassigned">Unassigned</string>
    <string name="notes">Notes:</string>
    <string name="self_assign">Self Assign</string>
    <string name="send_response">Send Response</string>
    <string name="mark_resolved">Mark Resolved</string>
</resources>