<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:padding="5dp"
    tools:context=".AwardCase">


    <LinearLayout
        android:id="@+id/backTrophyCase"
        android:layout_width="123dp"
        android:layout_height="67dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_trophy_case"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/trophy_case"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="40dp"
            android:layout_weight=".68"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <ImageView
                    android:id="@+id/trophy1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/trophy"
                    android:contentDescription="@string/first_trophy" />

                <ImageView
                    android:id="@+id/trophy2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/trophy2"
                    android:contentDescription="@string/second_trophy" />

                <ImageView
                    android:id="@+id/trophy3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/trophy3"
                    android:contentDescription="@string/third_trophy" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/trophy4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/trophy4"
                    android:contentDescription="@string/fourth_trophy" />

                <ImageView
                    android:id="@+id/trophy5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/medal"
                    android:contentDescription="@string/first_medal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/trophy6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/medal2"
                    android:contentDescription="@string/second_medal" />

                <ImageView
                    android:id="@+id/trophy7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/medal3"
                    android:contentDescription="@string/third_medal" />

                <ImageView
                    android:id="@+id/trophy8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/medal4"
                    android:contentDescription="@string/fourth_medal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/trophy9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:tint="@color/darkGrey"
                    app:srcCompat="@drawable/early_bird_removebg_preview"
                    android:contentDescription="@string/early_bird_trophy" />

                <ImageView
                    android:id="@+id/trophy10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:tint="@color/darkGrey"
                    android:layout_weight="1"
                    android:contentDescription="@string/tenth_trophy" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/trophy11"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:tint="@color/darkGrey"
                    android:layout_weight="1"
                    android:contentDescription="@string/eleventh_trophy" />

                <ImageView
                    android:id="@+id/trophy12"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:tint="@color/darkGrey"
                    android:layout_weight="1"
                    android:contentDescription="@string/twelfth_trophy" />

                <ImageView
                    android:id="@+id/trophy13"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:tint="@color/darkGrey"
                    android:layout_weight="1"
                    android:contentDescription="@string/thirteenth_trophy" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".12" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/trophyPopup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="5dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/trophy"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/button"
            android:elevation="10dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/trophyView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:contentDescription="@string/trophy_description_box"
                app:srcCompat="@drawable/trophy" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".65"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/achievement_unlocked"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/you_ve_unlocked_the_first_trophy"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".15"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/closeTrophyView1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="top|center"
                    android:layout_weight=".5"
                    android:contentDescription="@string/close_trophy"
                    android:padding="15dp"
                    app:srcCompat="@drawable/ic_baseline_close_24"
                    app:tint="@color/white"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/shareTrophy1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="bottom|center"
                    android:layout_weight=".5"
                    android:contentDescription="@string/share_trophy"
                    android:padding="15dp"
                    app:srcCompat="@drawable/baseline_share_24"
                    app:tint="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>