<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="100dp"
    android:background="@drawable/agent_bubble"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/agentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerService1"
        android:textColor="@color/black"
        android:textSize="13.5sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/agentMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/helloUser"
        android:textSize="13.5sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/agentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:text="@string/march_26_2023_09_35_pm"
        android:textSize="13.5sp"
        android:textStyle="italic" />

</LinearLayout>